Button group z-index fix.

--- a/src/main/resources/ru/ppsrk/gwt/bootstrap/public/gwtutil-bs.css
+++ b/src/main/resources/ru/ppsrk/gwt/bootstrap/public/gwtutil-bs.css
@@ -7,3 +7,7 @@ form {
 legend {
 	margin-bottom: 10px !important;
 }
+
+.btn-group > .btn {
+    z-index: 0 !important;
+}
